--- a/ifs-web-service/ifs-web-core/src/main/resources/templates/fragments/application.html
+++ b/ifs-web-service/ifs-web-core/src/main/resources/templates/fragments/application.html
@@ -32,10 +32,10 @@
                             <ul>
                                 <li th:each="item : ${feedback}">
                                     <div th:if="${formInput.getQuestion()} == ${item.question}">
-                                        <div class="column-half">
+                                        <div class="column-half" style="padding: 0 0px;">
                                             <h3 class="heading-small">Feedback</h3>
                                         </div>
-                                        <div class="column-half alignright heading-small ">
+                                        <div class="column-half alignright heading-small" style="padding: 0 0px;">
                                             <ul>
                                                 <li th:each="score : ${score}">
                                                     <div th:if="${formInput.getQuestion()} == ${score.question}">
@@ -44,7 +44,11 @@
                                                 </li>
                                             </ul>
                                         </div>
-                                            <p th:text="${item.value}">Feedback text</p>
+                                        <div class="grid-row">
+                                            <div class="column-one">
+                                                <p th:text="${item.value}">Feedback text</p>
+                                            </div>
+                                        </div>
                                     </div>
                                 </li>
                             </ul>
@@ -105,7 +109,5 @@
         <h2 class="heading-small">Other comments</h2>
         <p th:text="${feedbackSummary[0].getFundingDecision().getComment()}">Feedback text</p>
     </section>
-
-
 
 </th:block>
