--- a/ifs-web-service/ifs-web-core/src/main/resources/templates/fragments/modals.html
+++ b/ifs-web-service/ifs-web-core/src/main/resources/templates/fragments/modals.html
@@ -508,8 +508,30 @@
             <p>They will be reminded to accept the role of finance contact.</p>
         </div>
         <hr />
-        <form method="get" th:action="@{${#ifsUtil.formPostUri(#httpServletRequest)}}">
+        <form method="post" th:action="@{${#ifsUtil.formPostUri(#httpServletRequest)}}">
             <div>
+                <input type="hidden" name="Resend_fc_invite" value=""/>
+                <input type="hidden" name="Organisation" value=""/>
+                <button class="button" type="submit">Resend</button>
+                <button class="buttonlink js-close" type="button">Cancel</button>
+            </div>
+        </form>
+    </div>
+</th:block>
+
+
+<!-- confirmation of resending project manager invite -->
+<th:block th:fragment="modal-resend-project-manager">
+    <div class="modal-resend-project-manager" role="dialog" aria-hidden="true">
+        <th:block th:insert="fragments/modals :: close-button" />
+        <div class="modal-content">
+            <h2 class="heading-medium no-margin">Resend invite to team member</h2>
+            <p>They will be reminded to accept the role of Project Manager.</p>
+        </div>
+        <hr />
+        <form method="post" th:action="@{${#ifsUtil.formPostUri(#httpServletRequest)}}">
+            <div>
+                <input type="hidden" name="Resend_pm_invite" value=""/>
                 <button class="button" type="submit">Resend</button>
                 <button class="buttonlink js-close" type="button">Cancel</button>
             </div>
