--- a/ifs-web-service/ifs-project-setup-service/src/main/resources/templates/project/finance-contact.html
+++ b/ifs-web-service/ifs-project-setup-service/src/main/resources/templates/project/finance-contact.html
@@ -49,8 +49,8 @@
                             <label data-set-section-valid="#finance-contact-section" data-clear-inputs="#name-finance-contact,#email-finance-contact" th:for="${#ids.prev('financeContact')}" th:text="${user.name}">Username</label>
                             <a
                                 data-js-modal="modal-resend-finance-contact"
-                                th:attr="data-modal-form-action=@{/project/{projectId}/details/finance-contact?resend_fc_invite={userId}(projectId=${model.projectId},userId=${user.id})}"
-                                th:href="@{/project/{projectId}/details/finance-contact?resend_fc_invite={userId}(projectId=${model.projectId},userId=${user.id})}"
+                                th:attr="data-modal-form-action=@{/project/{projectId}/details/finance-contact?Resend_fc_invite={userId}(projectId=${model.projectId},userId=${user.id})},data-modal-input-Resend_fc_invite=${user.id},data-modal-input-organisation=${model.organisationId}"
+                                th:href="@{/project/{projectId}/details/finance-contact?Resend_fc_invite={userId}(projectId=${model.projectId},userId=${user.id})}"
                                 class="button button-clear no-margin">
                                 Resend invite
                             </a>
