--- a/ifs-web-service/ifs-project-setup-service/src/main/resources/templates/project/finance-contact.html
+++ b/ifs-web-service/ifs-project-setup-service/src/main/resources/templates/project/finance-contact.html
@@ -49,8 +49,8 @@
                             <label data-set-section-valid="#finance-contact-section" data-clear-inputs="#name-finance-contact,#email-finance-contact" th:for="${#ids.prev('financeContact')}" th:text="${user.name}">Username</label>
                             <a
                                 data-js-modal="modal-resend-finance-contact"
-                                th:attr="data-modal-form-action=@{/project/{projectId}/details/finance-contact?Resend_fc_invite={userId}(projectId=${model.projectId},userId=${user.id})},data-modal-input-Resend_fc_invite=${user.id},data-modal-input-organisation=${model.organisationId}"
-                                th:href="@{/project/{projectId}/details/finance-contact?Resend_fc_invite={userId}(projectId=${model.projectId},userId=${user.id})}"
+                                th:attr="data-modal-form-action=@{/project/{projectId}/details/finance-contact?resend-fc-invite={userId}(projectId=${model.projectId},userId=${user.id})},data-modal-input-resend-fc-invite=${user.id},data-modal-input-organisation=${model.organisationId}"
+                                th:href="@{/project/{projectId}/details/finance-contact?resend-fc-invite={userId}(projectId=${model.projectId},userId=${user.id})}"
                                 class="button button-clear no-margin">
                                 Resend invite
                             </a>
@@ -83,7 +83,7 @@
                                             <input type="email" class="form-control width-full" th:value="*{inviteEmail}" th:classappend="${#fields.hasErrors('inviteEmail')} ? 'form-control-error'" name="inviteEmail" id="email-finance-contact" th:attr="data-required-errormessage=#{validation.project.invite.email.required}" required="required"/>
                                         </td>
                                         <td class="alignright">
-                                            <button class="buttonlink no-margin-bottom" name="invite_fc" id="invite-finance-contact">Invite to project</button>
+                                            <button class="buttonlink no-margin-bottom" name="invite-fc" id="invite-finance-contact">Invite to project</button>
                                         </td>
                                     </tr>
                                 </tbody>
@@ -96,7 +96,7 @@
 
                 <p>You can change your finance contact up until your grant offer letter is generated.</p>
 
-                <button class="button extra-margin" type="submit"  name="save_fc" id="save">Save finance contact</button>
+                <button class="button extra-margin" type="submit"  name="save-fc" id="save">Save finance contact</button>
             </form>
 
 
