IFS-2246 Resend invites text updates

--- a/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2246-view-invite.html
+++ b/ifs-web-service/ifs-application-service/src/main/resources/templates/prototypes/IFS-2246-view-invite.html
@@ -24,7 +24,7 @@
         <table>
             <thead>
                 <tr>
-                    <th>Application</th>
+                    <th class="width-small">Application number</th>
                     <th>Project title</th>
                     <th>Lead organisation</th>
                     <th>Date assigned</th>
