--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/invite.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/invite.html
@@ -102,6 +102,7 @@
                                     class="form-control width-full"
                                     data-progressive-group-select="Innovation sector"
                                     data-progressive-group-select-instruction="Please select an innovation sector"
+                                    data-progressive-group-select-id="selectedInnovationArea"
                                     required="required"
                                     th:attr="data-required-errormessage=#{validation.inviteNewAssessorsForm.selectedInnovationArea.required}"
                                     aria-labelledby="innovation-area"
