--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/panel-find.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/assessors/panel-find.html
@@ -142,7 +142,7 @@
                         </div>
                     </td>
                     <td>
-                        <a th:href="@{/assessment/panel/competition/{competitionId}/assessors/profile/{assessorId}(competitionId=${model.competitionId},assessorId=${assessor.id})} + ${originQuery}"
+                        <a th:href="@{/competition/{competitionId}/assessors/profile/{assessorId}(competitionId=${model.competitionId},assessorId=${assessor.id})} + ${originQuery}"
                            th:text="${assessor.name}">John Barnes
                         </a>
                     </td>
