--- a/ifs-web-service/ifs-web-core/src/main/resources/static/sass/components/_collapsible-sections.scss
+++ b/ifs-web-service/ifs-web-core/src/main/resources/static/sass/components/_collapsible-sections.scss
@@ -80,11 +80,28 @@
     }
   }
 
+  > h2{
+    &.heading-medium {
+      margin: 0;
+
+      button{
+        @include core-24;
+        font-weight: bold;
+      }
+    }
+  }
+
   .status {
-    float:right;
-    padding-top:2px;
-    font-weight:normal;
-    font-size:0.9em;
+    float: right;
+    padding-top: 2px;
+    font-weight: normal;
+    font-size: 0.9em;
+
+    &.yes{
+      color: $green;
+      font-weight: bold;
+      padding-right: 1em;
+    }
   }
 
   .section {
