IFS-2661 Fix typo

--- a/ifs-web-service/ifs-front-door-service/src/main/resources/templates/competition/info/default-terms-and-conditions.html
+++ b/ifs-web-service/ifs-front-door-service/src/main/resources/templates/competition/info/default-terms-and-conditions.html
@@ -87,7 +87,7 @@
     </ul>
     <h2 class="heading-medium">7. Financial reporting</h2>
     <p>You agree to appoint an Independent Accountant who will inspect your financial statements relating to the grant. They will prepare an Independent Accountant’s Report using Innovate UK’s standard template, at the intervals stated in the relevant guidance note. The Report will contain an opinion that:</p>
-    <ul class="lis list-bullet">
+    <ul class="list list-bullet">
         <li>the financial information and level of grant claimed are accurate and legitimate</li>
         <li>eligible costs that you have submitted have been properly incurred and paid</li>
         <li>you have provided satisfactory explanations for any queries raised by the Independent Accountant</li>
