IFS-2642: Address review comments

--- a/ifs-web-service/ifs-project-setup-service/src/main/resources/templates/project/resend-fc-invite-confirm.html
+++ b/ifs-web-service/ifs-project-setup-service/src/main/resources/templates/project/resend-fc-invite-confirm.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en" xmlns:th="http://www.w3.org/1999/xhtml">
 <head>
-    <th:block th:insert="fragments/layout :: head" th:with="pageTitle='Resend finance contact invite'" />
+    <th:block th:insert="fragments/layout :: head" th:with="pageTitle='Resend invite to finance contact'" />
 </head>
 <body th:with="context='project'">
 <th:block th:insert="fragments/layout :: body-start" />
