--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/competition/manage-interview-panel.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/competition/manage-interview-panel.html
@@ -4,7 +4,7 @@
     <th:block th:insert="fragments/layout :: head" th:with="pageTitle='Manage interview panel'" />
 </head>
 
-<body th:with="context='comp-management'" class="competition-management">
+<body th:with="context='comp-management'" class="competition-management wide-page">
 <th:block th:insert="fragments/layout :: body-start" />
 <th:block th:insert="fragments/layout :: global-header" />
 
@@ -12,38 +12,35 @@
     <th:block th:insert="fragments/competition-setup :: comp-setup-header-sub (linkTitle='Competition',linkClass='link-back',linkUrl=@{/competition/{id}(id=${model.competitionId})})" />
     <th:block th:insert="fragments/layout :: page-title" th:with="pageTitle='Manage interview panel',subTitle=|${model.competitionId}: ${model.competitionName}, competition ${#strings.toLowerCase(model.competitionStatus.displayName)} |,size='heading-xlarge'" />
 
-    <div class="no-constrain-width justify-left">
+    <ul class="grid-row">
+        <li class="column-quarter">
+            <div class="highlight-panel highlight-panel-padded">
+                <span class="heading-large" th:text="0"></span><br /><small>Assessors assigned</small>
+            </div>
+        </li>
 
-        <ul class="grid-row">
-            <li class="column-quarter">
-                <div class="highlight-panel highlight-panel-padded">
-                    <span class="heading-large" th:text="0"></span><br /><small>Assessors assigned</small>
-                </div>
-            </li>
+        <li class="column-quarter">
+            <div class="highlight-panel highlight-panel-padded">
+                <span class="heading-large" th:text="0"></span><br /><small>Applications responded to feedback</small>
+            </div>
+        </li>
 
-            <li class="column-quarter">
-                <div class="highlight-panel highlight-panel-padded">
-                    <span class="heading-large" th:text="0"></span><br /><small>Applications responded to feedback</small>
-                </div>
-            </li>
+        <li class="column-quarter">
+            <div class="highlight-panel highlight-panel-padded">
+                <span class="heading-large" th:text="0"></span><br /><small>Assessors accepted</small>
+            </div>
+        </li>
+    </ul>
 
-            <li class="column-quarter">
-                <div class="highlight-panel highlight-panel-padded">
-                    <span class="heading-large" th:text="0"></span><br /><small>Assessors accepted</small>
-                </div>
-            </li>
-        </ul>
+    <ul class="link-list extra-margin">
+        <li><a class="disabled" aria-disabled="true">Assign applications</a></li>
 
-        <ul class="link-list extra-margin-top">
-            <li><a class="disabled" aria-disabled="true">Assign applications</a></li>
+        <li><a class="disabled" aria-disabled="true"> Invite Assessors</a></li>
 
-            <li><a class="disabled" aria-disabled="true"> Invite Assessors</a></li>
+        <li><p class="extra-margin">You can allocate applications to assessors once they have responded.</p></li>
 
-            <li><p class="extra-margin-top">You can allocate applications to assessors once they have responded.</p></li>
-
-            <li><a class="disabled" aria-disabled="true">Allocate applications to assessors</a></li>
-        </ul>
-    </div>
+        <li><a class="disabled" aria-disabled="true">Allocate applications to assessors</a></li>
+    </ul>
 
     <th:block th:insert="fragments/layout :: main-content-end" />
 </main>
