--- a/ifs-web-service/ifs-project-setup-service/src/main/resources/templates/project/resend-fc-invite-confirm.html
+++ b/ifs-web-service/ifs-project-setup-service/src/main/resources/templates/project/resend-fc-invite-confirm.html
@@ -14,7 +14,7 @@
     <form th:action="@{/project/{projectId}/details/finance-contact(projectId=${model.projectId})}" method="POST" >
         <th:block th:insert="fragments/layout :: page-title" th:with="pageTitle='Resend invite to team member',size='heading-xlarge'" />
         <h2 class="heading-medium no-margin">Resend invite to team member</h2>
-        <p>They will be reminded to accept the role of finance contact.</p>
+        <p>They will be resent an email inviting them to join the project</p>
         <hr />
         <input type="hidden" id="resend-fc-invite" name="resend-fc-invite" th:value="${model.inviteId}"/>
         <input type="hidden" id="organisation" name="organisation" th:value="${model.organisationId}"/>
