--- a/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/competition/competition-in-flight.html
+++ b/ifs-web-service/ifs-competition-mgt-service/src/main/resources/templates/competition/competition-in-flight.html
@@ -122,6 +122,20 @@
                     </li>
                     <li th:unless="${model.readOnly}">
                         <a class="disabled" aria-disabled="true"
+                           th:if="${!model.interviewPanelEnabled or
+                            model.competitionStatus == T(org.innovateuk.ifs.competition.resource.CompetitionStatus).READY_TO_OPEN
+                            or model.competitionStatus == T(org.innovateuk.ifs.competition.resource.CompetitionStatus).OPEN}">
+                            Manage interview panel
+                        </a>
+                        <a th:unless="${!model.interviewPanelEnabled or
+                            model.competitionStatus == T(org.innovateuk.ifs.competition.resource.CompetitionStatus).READY_TO_OPEN
+                            or model.competitionStatus == T(org.innovateuk.ifs.competition.resource.CompetitionStatus).OPEN}"
+                           th:href="@{/interview/panel/competition/{competitionId}(competitionId=${model.competitionId})}">
+                            Manage interview panel
+                        </a>
+                    </li>
+                    <li th:unless="${model.readOnly}">
+                        <a class="disabled" aria-disabled="true"
                            th:if="${model.competitionStatus == T(org.innovateuk.ifs.competition.resource.CompetitionStatus).READY_TO_OPEN
                             or model.competitionStatus == T(org.innovateuk.ifs.competition.resource.CompetitionStatus).OPEN
                             or model.competitionStatus == T(org.innovateuk.ifs.competition.resource.CompetitionStatus).CLOSED
