--- a/ifs-web-service/ifs-web-core/src/main/resources/templates/finance/finance.html
+++ b/ifs-web-service/ifs-web-core/src/main/resources/templates/finance/finance.html
@@ -682,11 +682,13 @@
                     <label th:for="${'cost-overheads-'+overheadCosts?.id+'-calculate'}">
                         <span>Enter the total cost of overheads as calculated in the spreadsheet &pound;</span>
                     </label>
-                    <input type="text"
+                    <input type="number"
                            th:name="${'overheads-total-' + question.id + '-'+overheadCosts?.id}"
                            class="form-control form-control-1-4 alignright"
                            th:id="${'cost-overheads-'+overheadCosts?.id+'-calculate'}"
-                           th:value="${overheadRate.equals(T(org.innovateuk.ifs.finance.resource.cost.OverheadRateType).TOTAL)} ? ${costCategory?.total} : '0'"/>
+                           th:value="${overheadRate.equals(T(org.innovateuk.ifs.finance.resource.cost.OverheadRateType).TOTAL)} ? ${costCategory?.total} : '0'"
+                           min="0"
+                           max="999999999" />
                     <input type="hidden"
                            readonly="readonly"
                            th:id="${'section-total-'+subSection.id+'-calculate-formatted'}"
