--- a/ifs-web-service/ifs-project-setup-service/src/main/resources/templates/project/finance-checks.html
+++ b/ifs-web-service/ifs-project-setup-service/src/main/resources/templates/project/finance-checks.html
@@ -47,7 +47,7 @@
 
     <div class="collapsible" th:classappend="${model.isSingleQuery() ? 'collapsible-expanded' : ''}">
         <th:block th:each="query : ${model.getQueries()}">
-            <h2 class="heading-medium" th:id="${'title-query-' + query.id}">
+            <h2 class="heading-medium" th:id="${'title-query-' + query.id}" th:attr="data-collapsible-id=${'finance-checks-query-' + query.getId()}">
                 <th:block th:text="${query.title}">Query Thread Title</th:block>
                 <th:block th:if="${query.isClosed()}"><span class="status yes">Resolved</span></th:block>
             </h2>
